update html and css

--- a/index.css
+++ b/index.css
@@ -1,56 +1,53 @@
 @font-face {
-  font-family:"Verdana";
-  src: url("verdana-boldd.ttf");
+  font-family: 'Verdana';
+  src: url('verdana-boldd.ttf');
 }
 
 @font-face {
-  font-family:"Timer";
-  src: url("CursedTimerULiL.ttf");
+  font-family: 'Timer';
+  src: url('CursedTimerULiL.ttf');
 }
 
 body {
-    background-color: #1B244A;
-    margin: 0;
-    text-align: center;
+  background-color: #1b244a;
+  margin: 0;
+  text-align: center;
 }
 
 .container {
-    display: flex;
-    justify-content: space-around;
+  display: flex;
+  justify-content: space-around;
+  width: 150px;
 }
 
 h3 {
-    color: #EEEEEE;
-    font-family: Verdana;
-    font-weight: 700;
-    font-size: 40px;
-    margin: 70px auto 20px auto;
+  color: #eeeeee;
+  font-family: Verdana;
+  font-weight: 700;
+  font-size: 40px;
+  margin: 70px auto 20px auto;
 }
 
-.score-number{
-    background-color: #080001;
-    color: #F94F6D;
-    width: 155px;
-    height: 120px;
-    border-radius: 5px;
-    
-    font-family: Timer;
-    font-size: 90px;
-    margin: 0 auto;
-    padding-top: 20px;
-}
+.score-number {
+  background-color: #080001;
+  color: #f94f6d;
+  width: 155px;
+  height: 120px;
+  border-radius: 5px;
 
-.counter{
- 
+  font-family: Timer;
+  font-size: 90px;
+  margin: 0 auto;
+  padding-top: 20px;
 }
 
 button {
-    font-family: Timer;
-    font-size: 18px;
-    background-color: #1B244A;
-    color: #9AABD8;
-    border: #9AABD8 solid 2px;
-    border-radius: 2px;
-    padding: 8px;
-    margin: 20px 0 0 10px;
+  font-family: Timer;
+  font-size: 18px;
+  background-color: #1b244a;
+  color: #9aabd8;
+  border: #9aabd8 solid 2px;
+  border-radius: 2px;
+  padding: 8px;
+  margin: 20px 0 0 10px;
 }
